<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/mes_infos"
            android:visible="true"/>

        <item
            android:id="@+id/nav_commande"
            android:icon="@drawable/ic_shopping"
            android:title="@string/mes_commande"
            android:visible="true"/>
    </group>


    <item android:title="Catégories">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_robe"
                    android:icon="@drawable/ic_chevron_right"
                    android:title="@string/robe" />

                <item
                    android:id="@+id/nav_tshirt"
                    android:icon="@drawable/ic_chevron_right"
                    android:title="@string/tshirt" />

                <item
                    android:id="@+id/nav_veston"
                    android:icon="@drawable/ic_chevron_right"
                    android:title="@string/veston" />

                <item
                    android:id="@+id/nav_pantalon"
                    android:icon="@drawable/ic_chevron_right"
                    android:title="@string/pantalon" />

                <item
                    android:id="@+id/nav_chaussure"
                    android:icon="@drawable/ic_chevron_right"
                    android:title="@string/chaussure" />

            </group>
        </menu>
    </item>


    <item android:title="Communication">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_tag_faces"
                android:title="@string/contact_us"
                android:visible="false"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"
                android:visible="false"/>

        </menu>
    </item>

</menu>
