<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        android:visible="false"/>-->

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_white_36dp"
        android:title="Search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/orders"
        android:orderInCategory="100"
        android:title="@string/my_orders"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="never" />

</menu>
