<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_sheet"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/title_total_cart"
        android:textColor="#212121"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ddd"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/rect_empty_border"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/total_achats"
            android:textColor="#212121"
            android:textSize="16sp"
            android:layout_weight="60"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/gratuite"
            android:id="@+id/total_achats"
            android:textColor="#212121"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="40"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ddd"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/rect_empty_border"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/livraison"
            android:textColor="#212121"
            android:textSize="16sp"
            android:layout_weight="60"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/gratuite"
            android:textColor="#212121"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="40"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ddd"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/rect_empty_border"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/total"
            android:textColor="#212121"
            android:textSize="16sp"
            android:layout_weight="60"/>


        <TextView
            android:id="@+id/soustotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:padding="16dp"
            android:text="44 5500 FCFA"
            android:textColor="#212121"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="40"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ddd"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin" />

    <Button
        android:id="@+id/commande"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/commander"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:background="@drawable/rect_full_border"
        android:layout_gravity="bottom|center_horizontal"/>

</LinearLayout>